crates/compiler/semantic/tests/snapshots/diagnostics__lib::scoping::unused_variables::test_unused_parameter.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::scoping::unused_variables::test_unused_parameter"
---
Fixture: lib::scoping::unused_variables::test_unused_parameter
============================================================
Source code:

        func test(unused_param: felt) {
            return ();
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused_param'
   ╭─[ lib::scoping::unused_variables::test_unused_parameter:2:19 ]
   │
 2 │         func test(unused_param: felt) {
   │                   ──────┬─────  
   │                         ╰─────── Unused variable 'unused_param'
───╯
