crates/compiler/semantic/tests/snapshots/diagnostics__lib::statements::assignments::test_assignment_to_undeclared_variable.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::statements::assignments::test_assignment_to_undeclared_variable"
---
Fixture: lib::statements::assignments::test_assignment_to_undeclared_variable
============================================================
Source code:
func test() { 
        x = 42; // Error: undeclared variable
     }
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'x'
   ╭─[ lib::statements::assignments::test_assignment_to_undeclared_variable:2:9 ]
   │
 2 │         x = 42; // Error: undeclared variable
   │         ┬  
   │         ╰── Undeclared variable 'x'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::statements::assignments::test_assignment_to_undeclared_variable:1:6 ]
   │
 1 │ func test() {
   │      ──┬─  
   │        ╰─── Function 'test' doesn't return on all paths
───╯
