crates/compiler/semantic/tests/snapshots/diagnostics__lib::statements::assignments::test_assignment_to_variable_not_in_scope.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::statements::assignments::test_assignment_to_variable_not_in_scope"
---
Fixture: lib::statements::assignments::test_assignment_to_variable_not_in_scope
============================================================
Source code:
func test() { 
        {
            let inner = 42;
        }
        inner = 10; // Error: inner not in scope
     }
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'inner'
   ╭─[ lib::statements::assignments::test_assignment_to_variable_not_in_scope:5:9 ]
   │
 5 │         inner = 10; // Error: inner not in scope
   │         ──┬──  
   │           ╰──── Undeclared variable 'inner'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::statements::assignments::test_assignment_to_variable_not_in_scope:1:6 ]
   │
 1 │ func test() {
   │      ──┬─  
   │        ╰─── Function 'test' doesn't return on all paths
───╯
