crates/compiler/semantic/tests/snapshots/diagnostics__lib::statements::assignments::test_assignment_with_undeclared_in_rhs.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::statements::assignments::test_assignment_with_undeclared_in_rhs"
---
Fixture: lib::statements::assignments::test_assignment_with_undeclared_in_rhs
============================================================
Source code:
func test() { 
        let x = 10;
        x = undefined_var + 5; // Error: undeclared variable in RHS
     }
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ lib::statements::assignments::test_assignment_with_undeclared_in_rhs:3:13 ]
   │
 3 │         x = undefined_var + 5; // Error: undeclared variable in RHS
   │             ──────┬──────  
   │                   ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::statements::assignments::test_assignment_with_undeclared_in_rhs:1:6 ]
   │
 1 │ func test() {
   │      ──┬─  
   │        ╰─── Function 'test' doesn't return on all paths
───╯
