crates/compiler/semantic/tests/snapshots/diagnostics__lib::statements::expression_statements::test_function_call_statement_undeclared.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::statements::expression_statements::test_function_call_statement_undeclared"
---
Fixture: lib::statements::expression_statements::test_function_call_statement_undeclared
============================================================
Source code:
func test() { 
        undefined_function(); // Error: undeclared function
     }
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_function'
   ╭─[ lib::statements::expression_statements::test_function_call_statement_undeclared:2:9 ]
   │
 2 │         undefined_function(); // Error: undeclared function
   │         ─────────┬────────  
   │                  ╰────────── Undeclared variable 'undefined_function'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::statements::expression_statements::test_function_call_statement_undeclared:1:6 ]
   │
 1 │ func test() {
   │      ──┬─  
   │        ╰─── Function 'test' doesn't return on all paths
───╯
