crates/compiler/semantic/tests/snapshots/diagnostics__lib::statements::let_statements::test_let_with_undeclared_variable.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::statements::let_statements::test_let_with_undeclared_variable"
---
Fixture: lib::statements::let_statements::test_let_with_undeclared_variable
============================================================
Source code:
func test() { let x = undefined_var; }
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ lib::statements::let_statements::test_let_with_undeclared_variable:1:23 ]
   │
 1 │ func test() { let x = undefined_var; }
   │                       ──────┬──────  
   │                             ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::statements::let_statements::test_let_with_undeclared_variable:1:6 ]
   │
 1 │ func test() { let x = undefined_var; }
   │      ──┬─  
   │        ╰─── Function 'test' doesn't return on all paths
───╯
