crates/compiler/semantic/tests/snapshots/diagnostics__scoping::duplicate_definitions::test_duplicate_in_same_scope.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::duplicate_definitions::test_duplicate_in_same_scope"
---
Fixture: semantic_tests::scoping::duplicate_definitions::test_duplicate_in_same_scope
============================================================
Source code:

        func test() {
            let var = 10;
            let another = 20;
            let var = 30; // Duplicate definition
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1003] Error: Duplicate definition of 'var'
   ╭─[ semantic_tests::scoping::duplicate_definitions::test_duplicate_in_same_scope:5:17 ]
   │
 5 │             let var = 30; // Duplicate definition
   │                 ─┬─  
   │                  ╰─── Duplicate definition of 'var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::duplicate_definitions::test_duplicate_in_same_scope:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
