crates/compiler/semantic/tests/snapshots/diagnostics__scoping::duplicate_definitions::test_parameter_and_local_duplicate.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::duplicate_definitions::test_parameter_and_local_duplicate"
---
Fixture: semantic_tests::scoping::duplicate_definitions::test_parameter_and_local_duplicate
============================================================
Source code:

        func test(param: felt) {
            let param = 42; // Duplicate with parameter
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1003] Error: Duplicate definition of 'param'
   ╭─[ semantic_tests::scoping::duplicate_definitions::test_parameter_and_local_duplicate:3:17 ]
   │
 3 │             let param = 42; // Duplicate with parameter
   │                 ──┬──  
   │                   ╰──── Duplicate definition of 'param'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::scoping::duplicate_definitions::test_parameter_and_local_duplicate:2:14 ]
   │
 2 │         func test(param: felt) {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
